[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/ContractMenu.gd" type="Script" id=1]
[ext_resource path="res://resources/ui_theme.tres" type="Theme" id=2]

[node name="ContractMenu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
margin_right = 302.0
margin_bottom = 232.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 298.0
margin_bottom = 228.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
margin_right = 294.0
margin_bottom = 224.0

[node name="Sign_Your_contract" type="MarginContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 294.0
margin_bottom = 26.0

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Sign_Your_contract"]
margin_right = 294.0
margin_bottom = 26.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Sign_Your_contract/PanelContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 290.0
margin_bottom = 22.0

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Sign_Your_contract/PanelContainer/MarginContainer"]
margin_right = 286.0
margin_bottom = 18.0

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Sign_Your_contract/PanelContainer/MarginContainer/CenterContainer"]
margin_left = 53.0
margin_right = 232.0
margin_bottom = 18.0
text = "Sign your contract!"

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 294.0
margin_bottom = 48.0

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/CenterContainer"]
margin_right = 294.0
margin_bottom = 18.0
text = "What will you trade for riches?"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 294.0
margin_bottom = 56.0

[node name="Vision_Button" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 294.0
margin_bottom = 79.0
toggle_mode = true
text = "Vision"

[node name="Connection_Button" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 83.0
margin_right = 294.0
margin_bottom = 102.0
toggle_mode = true
text = "Connection"

[node name="Health_Button" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 106.0
margin_right = 294.0
margin_bottom = 125.0
toggle_mode = true
text = "Health"

[node name="Luck_Button" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 129.0
margin_right = 294.0
margin_bottom = 148.0
toggle_mode = true
text = "Luck"

[node name="Time_Button" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 152.0
margin_right = 294.0
margin_bottom = 171.0
toggle_mode = true
text = "Time"

[node name="Wealth_Multiplier" type="MarginContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 175.0
margin_right = 294.0
margin_bottom = 201.0

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Wealth_Multiplier"]
margin_right = 294.0
margin_bottom = 26.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Wealth_Multiplier/PanelContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 290.0
margin_bottom = 22.0

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Wealth_Multiplier/PanelContainer/MarginContainer"]
margin_right = 286.0
margin_bottom = 18.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Wealth_Multiplier/PanelContainer/MarginContainer/CenterContainer"]
margin_left = 49.0
margin_right = 237.0
margin_bottom = 18.0

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Wealth_Multiplier/PanelContainer/MarginContainer/CenterContainer/HBoxContainer"]
margin_right = 177.0
margin_bottom = 18.0
text = "Wealth Multiplier: "

[node name="Multiplier_Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Wealth_Multiplier/PanelContainer/MarginContainer/CenterContainer/HBoxContainer"]
margin_left = 181.0
margin_right = 188.0
margin_bottom = 18.0
text = "1"

[node name="Sign_Button" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 205.0
margin_right = 294.0
margin_bottom = 224.0
text = "SIGN"
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Vision_Button" to="." method="_on_Vision_Button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Connection_Button" to="." method="_on_Connection_Button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Health_Button" to="." method="_on_Health_Button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Luck_Button" to="." method="_on_Luck_Button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Time_Button" to="." method="_on_Time_Button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Sign_Button" to="." method="_on_Sign_Button_pressed"]
